@@ -38,20 +38,11 @@ import jdk.test.lib.Asserts;
  * @test
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
- * @compile -XDignore.symbol.file=true
- *          --add-modules=jdk.hotspot.agent
- *          --add-exports=jdk.hotspot.agent/sun.jvm.hotspot=ALL-UNNAMED
- *          --add-exports=jdk.hotspot.agent/sun.jvm.hotspot.utilities=ALL-UNNAMED
- *          --add-exports=jdk.hotspot.agent/sun.jvm.hotspot.oops=ALL-UNNAMED
- *          --add-exports=jdk.hotspot.agent/sun.jvm.hotspot.debugger=ALL-UNNAMED
- *          TestInstanceKlassSizeForInterface.java
- * @run main/othervm
- *          --add-modules=jdk.hotspot.agent
- *          --add-exports=jdk.hotspot.agent/sun.jvm.hotspot=ALL-UNNAMED
- *          --add-exports=jdk.hotspot.agent/sun.jvm.hotspot.utilities=ALL-UNNAMED
- *          --add-exports=jdk.hotspot.agent/sun.jvm.hotspot.oops=ALL-UNNAMED
- *          --add-exports=jdk.hotspot.agent/sun.jvm.hotspot.debugger=ALL-UNNAMED
- *          TestInstanceKlassSizeForInterface
+ *          jdk.hotspot.agent/sun.jvm.hotspot
+ *          jdk.hotspot.agent/sun.jvm.hotspot.utilities
+ *          jdk.hotspot.agent/sun.jvm.hotspot.oops
+ *          jdk.hotspot.agent/sun.jvm.hotspot.debugger
+ * @run main/othervm TestInstanceKlassSizeForInterface
  */
 
 interface Language {
